basic style on start section.  fixed some layout issues with flex boxes

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -46,15 +46,43 @@ header .mobile {
   padding-top: 64px;
 }
 
+#start {
+  background-color: lightgrey;
+}
+
 .container {
   display: flex;
 }
 
 .banner {
-  width: 60%;
+  max-width: 60%;
   padding: 32px 24px;
 }
 
 .banner img {
   width: 100%;
+}
+
+.headline {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 70%;
+}
+
+.headline h1 {
+  margin: 0 0 32px 0;
+}
+
+.headline h3 {
+  margin: 0 0 32px 0;
+}
+
+.button {
+  display: flex;
+  justify-content: center;
+  padding: 8px 0;
+  background-color: black;
+  color: white;
+  /* width: 60%; */
 }
